--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <hr></hr>
 
-<h3>Legende Couleur:</h3>
+<h3 id="legend">Legende Couleur:</h3>
 <h4 id="green"> Evenement aujourd'hui !</h4>
 <h4 id="blue"> Evenement dans 3jours !</h4>
 <h4 id="red"> Evenement dépassé !</h4>
